# sdd-tui

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docs.yml
Formula/: sdd-tui.rb
best-practices/atomic-commits/: index.html
best-practices/scope-control/: index.html
best-practices/when-not-to-use-sdd/: index.html
changelog/: index.html
docs/: changelog.md  index.md
docs/best-practices/: atomic-commits.md  scope-control.md  when-not-to-use-sdd.md
docs/getting-started/: first-change.md  install.md
docs/openspec/: milestones.md  providers.md  (+2 more)
openspec/: INDEX.md  config.yaml
scripts/: Install-SddTui.ps1  changelog.py  install-skills.sh  install.sh  release.sh  sdd-env-scan.sh
search/: search_index.json
tests/: conftest.py  test_ai_docs.py  test_changelog.py  test_config.py  test_deps.py  test_docs_gen.py  test_git_reader.py  test_git_workflow_config.py  test_github.py  test_metrics.py  test_milestones.py  test_pipeline.py  test_progress.py  test_providers_github.py  test_providers_null.py  test_reader.py  test_release_config.py  test_setup.py  test_skills.py  test_spec_parser.py  test_todos.py  test_transports.py  test_tui_change_detail.py  test_tui_doc_viewer.py  test_tui_epics.py  test_tui_epics_milestones.py  test_tui_git_log.py  test_tui_help.py  test_tui_progress.py  test_tui_releases.py  test_tui_setup.py  test_tui_skill_palette.py  test_tui_spec_evolution.py  test_tui_spec_health.py  test_tui_todos.py  test_tui_velocity.py  test_velocity.py
(+324 files in other folders)
