[project]
name = "sdd-tui"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["textual>=0.70.0"]

[project.scripts]
sdd-tui = "sdd_tui.tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdd_tui"]

[dependency-groups]
dev = ["pytest>=8.0"]
